--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-04-images",
+  "name": "goit-react-hw-04-images1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://taras-novitskyi.github.io/goit-react-hw-04-images/",
+  "homepage": "https://taras-novitskyi.github.io/goit-react-hw-04-images1/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
